# NeuroCore

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  h.autoSetupRemote
C++/: CMakeLists.txt  Dockerfile  README.md
C++/src/: main.cpp
C++/src/data/: DataLoader.cpp  DataLoader.h  Tokenizer.cpp  Tokenizer.h
C++/src/data/Embeddings/: WordEmbeddings.cpp  WordEmbeddings.h
C++/src/data/Preprocessing/: Lemmatiser.cpp  StopWordsRemover.cpp  StopWordsRemover.h  TextCleaner.h
C++/src/interface/: InterfaceEngine.cpp  InterfaceEngine.h  pybind_module.cpp
C++/src/model/: NeuralNetwork.cpp  NeuralNetwork.h
C++/src/model/Activation/: ReLU.cpp  Sigmoid.cpp  Softmax.cpp  Softmax.h  Tanh.h
C++/src/model/Layers/: ConvolutionLayer.cpp  ConvolutionLayer.h  DenseLayer.cpp  DenseLayer.h  RecurrentLayer.cpp  TransformerLayer.cpp  TransformerLayer.h
C++/src/model/Optimiser/: Adam.cpp  Optimiser.cpp  Optimiser.h  Optimizer.h  RMSProp.cpp  SGD.cpp  SGD.h
C++/src/model/Optimizers/: Adam.cpp  Adam.h  Optimizer.h  RMSProp.h  SGD.cpp  SGD.h
C++/src/nlp/: NLPProcessor.cpp  NLPProcessor.h  NamedEntityRecognition.cpp  PartOfSpeechTagger.cpp  PartOfSpeechTagger.h  SentimentAnalysis.cpp
C++/src/training/: Trainer.cpp  Trainer.h
C++/src/training/LossFunctions/: LossFunction.h  MeanSquaredLoss.cpp
C++/src/training/Metrics/: Accuracy.cpp  Accuracy.h  Metric.cpp  Metric.h  Precision.cpp  Recall.cpp
C++/src/utils/: Config.cpp  Config.h  FileUtils.cpp  Logger.cpp  Logger.h
Config/: README.md  config.json  nlp_config.json  server_config.json
Documentation/: API_spec.md  architecture.md  deployment_guide.md  nlp_pipeline.md  user_guide.md
Python/: .env  Dockerfile  README.md  docker-compose.yml  requirements.txt
Python/src/: .env  __init__.py  combined_code.txt  database.py  init_db.py  inspect_parquet.py  main.py  test_interface_engine.py
Python/src/api/: __init__.py  auth.py  endpoints.py  health_check.py
Python/src/config/: __init__.py  constants.py  database_config.py  settings.py
Python/src/models/: __init__.py  nlp_models.py  request_models.py  response_models.py  user.py  user_models.py
Python/src/nlp/: __init__.py  embedder.py  processor.py  tokenizer.py
Python/src/services/: __init__.py  data_service.py  inference_service.py  nlp_service.py  training_service.py  user_service.py
Python/src/utils/: __init__.py  config.py  database.py  helpers.py  logger.py  security.py
Scripts/: cleanup.sh  data_preprocessing.py  deploy_server.sh  evaluate_model.cpp  generate_embeddings.cpp  monitor.py  monitor.sh
cpp_backend/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
cpp_backend/InterfaceEngine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpp_backend/src/: combined_code.txt  main.cpp
cpp_backend/src/data/: DataLoader.cpp  DataLoader.h  Tokenizer.cpp
cpp_backend/src/data/Embeddings/: EmbeddingLoader.cpp  EmbeddingLoader.h  WordEmbeddings.cpp  WordEmbeddings.h
cpp_backend/src/data/Preprocessing/: Lemmatiser.cpp  Lemmatiser.h  StopWordsRemover.cpp  StopWordsRemover.h  TextCleaner.cpp  TextCleaner.h
cpp_backend/src/interface/: InterfaceEngine.cpp  InterfaceEngine.h  pybind_module.cpp
cpp_backend/src/model/: NeuralNetwork.cpp  NeuralNetwork.h
cpp_backend/src/model/Activation/: ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Tanh.cpp  Tanh.h
cpp_backend/src/model/Layers/: ConvolutionLayer.cpp  ConvolutionLayer.h  DenseLayer.cpp  DenseLayer.h  RecurrentLayer.cpp  RecurrentLayer.h  TransformerLayer.cpp  TransformerLayer.h
cpp_backend/src/model/Optimizers/: Adam.cpp  Adam.h  Optimizer.h  RMSProp.cpp  RMSProp.h  SGD.cpp  SGD.h
cpp_backend/src/nlp/: NLPProcessor.cpp  NLPProcessor.h  NamedEntityRecognition.cpp  NamedEntityRecognition.h  PartOfSpeechTagger.cpp  PartOfSpeechTagger.h  SentimentAnalysis.cpp  SentimentAnalysis.h
cpp_backend/src/training/: Trainer.cpp  Trainer.h
cpp_backend/src/training/LossFunctions/: CrossEntropyLoss.cpp  CrossEntropyLoss.h  LossFunction.cpp  LossFunction.h  MeanSquaredLoss.cpp  MeanSquaredLoss.h
cpp_backend/src/training/Metrics/: Accuracy.cpp  Accuracy.h  Metric.cpp  Metric.h  Precision.cpp  Precision.h  Recall.cpp  Recall.h
cpp_backend/src/utils/: Config.cpp  Config.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h
